--- a/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich.csproj
+++ b/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich.csproj
@@ -55,7 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -63,7 +63,14 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Domain\Commands\RelayAsyncCommand.cs" />
+    <Compile Include="Domain\Commands\RelayCommand.cs" />
+    <Compile Include="Domain\Contexts\MainContext.cs" />
+    <Compile Include="Domain\IServices\INavService.cs" />
+    <Compile Include="Domain\Services\MainNavService.cs" />
+    <Compile Include="Domain\Utilities\ObservableObject.cs" />
+    <Compile Include="Domain\Utilities\ViewModel.cs" />
+    <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -93,6 +100,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\" />
+    <Folder Include="Data\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
